--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -1,7 +1,7 @@
 nav {
   width: 100vw;
   height: 5rem;
-  background-color: yellow;
+
   position: fixed;
   @include gradientbackground;
   box-shadow: 0 1rem 1rem rgba($black-color, 0.1);
@@ -31,3 +31,95 @@ nav {
     }
   }
 }
+
+
+
+/* =========Media queries (medium devices) */
+
+@media screen and (max-width:1024px){
+  nav{
+    .container{
+      button{
+        display: inline-block;
+        background: transparent;
+        color: $white-color;
+        font-size: 2rem;
+        cursor: pointer;
+
+        &#close_nav-btn{
+          display: none;
+        }
+           }
+
+      ul{
+        position: fixed;
+        right: 9%;
+        top: 5rem;
+        flex-direction: column;
+     
+        align-items: flex-start;
+        gap:0;
+        display: none;
+        perspective: 300px;
+
+        li{
+          width: 100%;
+          opacity: 0;
+          animation: flipnavItem 300ms ease forwards;
+          transform-origin: top;
+          
+          &:nth-child(2){
+            animation-delay: 200ms;
+          }
+          &:nth-child(3){
+            animation-delay: 400ms;
+          }
+          &:nth-child(4){
+            animation-delay: 600ms;
+          }
+          &:nth-child(5){
+            animation-delay: 800ms;
+          }
+       
+
+          @keyframes flipnavItem {
+          0%{
+               transform: rotateX(90deg);
+            }
+            100%{
+              transform: rotateX(0deg);
+              opacity: 1;
+            }
+            
+          }
+
+          a{
+            color: $white-color;
+            height: 100%;
+            display: block;
+            padding: 1.5rem 2rem;
+            border-radius: 0;
+            background: linear-gradient($primary-color-variant , darken($primary-color-variant,12%));
+
+             &.btn{
+              background: $secondary-color;
+             }
+
+          }
+        }
+
+      }  
+
+    }
+  }
+}
+
+
+/* =========Media queries (medium devices) */
+// @media screen and (max-width:600px) {
+
+//   body{
+//     background-color: yellow;
+//   }
+// }
+
