--- a/style.scss
+++ b/style.scss
@@ -2,3 +2,6 @@
 @import "./scss/partials/mixin";
 @import "./scss/partials/general";
 @import "./scss/partials/nav";
+@import "./scss/partials/header";
+@import "./scss/partials/services";
+@import "./scss/partials/specialists"
