--- a/style.scss
+++ b/style.scss
@@ -4,4 +4,5 @@
 @import "./scss/partials/nav";
 @import "./scss/partials/header";
 @import "./scss/partials/services";
-@import "./scss/partials/specialists"
+@import "./scss/partials/specialists";
+@import "./scss/partials/tesimonials"
